
Status of the documentation translation:
 * 3 languages at 100%: de, fr, it.
 * 4 languages >= 95%: es (96%), ja (99%), pt_BR (99%), uk (99%).
 * 2 languages >= 90%: nl (93%), sr_Cyrl (93%).
 * 4 languages >= 80%: pt (89%), ru (84%), zh_Hans (88%), zh_Hant (88%).
 * 1 language  >= 50%: pl (63%).
 * 1 language  >= 33%: ca (42%).
 * 4 starting languages: eo (3%), hr (0%), hu (0%), nb (4%).

=======================================================================
        ___  _____ ___
__   __/ _ \|___  / _ \
\ \ / / | | |  / / | | |          The PerlIO cleanup release.
 \ V /| |_| | / /| |_| |
  \_/  \___(_)_/  \___/           (Released on 2024/01/29)

Major cleanup: 
 * Greatly simplify the code by using PerlIO instead of messing up 
   with encodings manually.
 * This is a very intrusive change, and even if all tests of our 
   comprehensive suite pass, I still expect issues with this on some
   corner cases, such as projects not using UTF-8 but a mixture of 
   encodings. Please report any issue, and accept my apologies.
 * This greatly simplifies the code, enabling future maintenance.

Asciidoc:
 * Correctly handle lines that start with a dot in a paragraph.
   Thanks Jean-Noël Avila for the pull request.
 * Labels of cross-references were not translatable (GitHub's #400).
   Thanks Jean-Noël Avila for the pull request.
 * Fix a bug in the handling of the 'id' attribute (GitHub's #411).
   Thanks Jean-Noël Avila for the pull request.
 * Process multi-line attributes in legacy and asciidoctor mode
   (GitHub's #414). Thanks Jean-Noël Avila for the pull request.
 * Process transparent index entries in their own segments
   (GitHub's #424). Thanks Jean-Noël Avila for the pull request.
 * Keep original formating (GitHub's #416). Thanks suddenfall for
   the feedback, and Jean-Noël Avila for the fixes.
 * Fix a bug in handling of bold text starting a list item
   (GitHub's #447). Thanks Jean-Noël Avila for the pull request.