@@ -85,6 +85,10 @@ Status of the documentation translation:
  * 1 language  >= 33%: ca (42%).
  * 4 starting languages: eo (3%), hr (0%), hu (0%), nb (4%).
 
+Asciidoc:
+ * Support a cleanspaces option to remove extra spaces in wrapped lines
+   (GitHub's #464). Thanks Jean-Noël Avila for the pull request.
+
 =======================================================================
         ___  _____ ___
 __   __/ _ \|___  / _ \
